added all handlebars(still need some tuning later), as well as public folder, and fixed missing content in server.js

--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -12,8 +12,10 @@
 <head>Crowfunding App</head>
 <nav>
     <a href="#">Home</a>
-    <a href="/profile">Profile</a>
     <a href="/login">Login</a>
+    {{#if REQ.SESSIONS VAR HERE}}
+    <a href="/profile">Profile</a>
+    {{/if}}
 </nav>
     {{{body}}}
 </body>
