adjusted the extra each mention

--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -11,7 +11,7 @@
 <body>
 <head>Crowfunding App</head>
 <nav>
-    <a href="#">Home</a>
+    <a href="/">Home</a>
     <a href="/login">Login</a>
     {{#if REQ.SESSIONS VAR HERE}}
     <a href="/profile">Profile</a>
